Issue fix footer overlap

--- a/src/styles/Quiz.css
+++ b/src/styles/Quiz.css
@@ -1,3 +1,9 @@
+.trial-quiz-container {
+    display: flex;
+    flex: 1;
+    align-items: center;
+}
+
 .navbar {
     display: flex;
     justify-content: space-between;
